Add fav food list

--- a/lists1.html
+++ b/lists1.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>
-            List 1
-        </title>
-        
+        <meta charset="UTF-8">
+        <title>List</title>
     </head>
+
+    <body>
+        <ul>
+            <li>Chole Bhature</li>
+            <li>Pasta</li>
+            <li>Shawarma</li>
+        </ul>
+    </body>
 </html>
