--- a/lists2.html
+++ b/lists2.html
@@ -6,6 +6,10 @@
     </head>
 
     <body>
-        
+        <ol>
+            <li>Complete a couple of lessons from TOP</li>
+            <li>Go through the fastai textbook</li>
+            <li>Solve a question or two from LeetCode</li>
+        </ol>
     </body>
 </html>
