Add places to visit

--- a/lists3.html
+++ b/lists3.html
@@ -6,6 +6,10 @@
   </head>
 
   <body>
-    
+    <ol>
+      <li>Switzerland (not the cities)</li>
+      <li>The open sea</li>
+      <li>Nature</li>
+    </ol>
   </body>
 </html>
