Add fav movies and games

--- a/lists4.html
+++ b/lists4.html
@@ -6,6 +6,12 @@
   </head>
 
   <body>
-    
+    <ol>
+      <li>Avengers: Endgame</li>
+      <li>Marvel's The Avengers</li>
+      <li>Minecraft</li>
+      <li>Any happing ending movie of a peasant tbh</li>
+      <li>Batman Excel</li>
+    </ol>
   </body>
 </html>
