--- a/html/odin-links-and-images/index.html
+++ b/html/odin-links-and-images/index.html
@@ -6,6 +6,7 @@
   </head>
 
   <body>
-    
+    <h1>Homepage</h1>
+    <a href="https://www.theodinproject.com/about">click me</a>
   </body>
 </html>
